@@ -325,6 +325,9 @@ files to be unlocked, while the indirect upgrades don't touch the files.
 
 #### implementation todo list
 
+* Dropping a smudged file causes git status to show it as modified, 
+  because the timestamp has changed. Avoid this by preserving timestamp
+  of smudged files when manipulating.
 * linkAnnex should check disk reserve when it falls back to copying the
   file.
 * Reconcile staged changes into the associated files database, whenever
@@ -337,10 +340,6 @@ files to be unlocked, while the indirect upgrades don't touch the files.
   (when not in direct mode).
   However, beware over-optimisation breaking the assistant or perhaps other
   long-lived processes.
-* Convert `git annex unlock` to stage a pointer file, and hard link to the
-  annexed object (or write pointer file if annexed object not present).
-  - Also needs to thaw annex object file
-  - Also needs to update associated files db.
 * Convert `git annex lock` to verify that worktree file is not modified
   (same check used when updating pointer files to the content of a key),
   and then delete the worktree file and replace with an annex symlink.
